# mba-ia-pull-evaluation-prompt

./: .env.example  Makefile  README.md  pyproject.toml
docs/: fdd.md  tracing-reasoning.json  tracing-reasoning2.json
output/: output.txt
output/runs/: run-6c1cf1e2-573e-4f97-993f-c60f6826e62e.json  run-79e26b4d-8c87-46b9-be2c-ac81023f6c79.json  run-d244bee3-5d82-4a8a-b6a9-49db08054388.json
prompts/: bug_to_user_story_v1.yml  bug_to_user_story_v2.yml
src/: pull_prompts.py  push_prompts.py
tests/: test_prompts.py
