[project]
name = "mba-ia-pull-evaluation-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langchain-core==0.3.28",
    "langchain-google-genai==2.0.8",
    "langchain-openai==0.2.14",
    "langsmith==0.2.7",
    "pydantic==2.10.4",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
]
